migratons and jwt token added

--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-OA1SO8O;Database=DemoDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsASuperSecretKeyForJwtToken123!", // 32+ characters
+    "Issuer": "WebApplication1",
+    "Audience": "WebApplication1Users",
+    "ExpireMinutes": 60
   }
 }
