--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-OA1SO8O;Database=DemoDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisIsASuperSecretKeyForJwtToken123!", // 32+ characters
+    "Issuer": "WebApplication1",
+    "Audience": "WebApplication1Users",
+    "ExpireMinutes": 60
+  }
 }
